# cookiecutter-pylib

./: .coveragerc  .gitignore  README.md  cookiecutter.json
{{ cookiecutter.module_name }}/: Makefile  RELEASE.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
{{ cookiecutter.module_name }}/.github/workflows/: main.yml
{{ cookiecutter.project_name }}/: .coveragerc  .gitattributes  .gitignore  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  DEVELOP.md  MANIFEST.in  Makefile  README.md  RELEASE.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
{{ cookiecutter.project_name }}/.github/workflows/: main.yml  test.yml  tests.yml
{{ cookiecutter.project_name }}/{{ cookiecutter.module_name }}/: __init__.py  _version.py
{{ cookiecutter.project_name }}/{{ cookiecutter.module_name }}/tests/: test_import.py
