[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4", "wheel"]

[tool.setuptools_scm]
write_to = "{{ cookiecutter.module_name }}/_generated_version.py"

[tool.pytest.ini_options]
norecursedirs = ".git,dist,build,env,venv"
addopts = "{{ cookiecutter.module_name }}/tests --cov={{ cookiecutter.module_name }} --cov-report term-missing"
markers = [
]

[tool.coverage.run]
parallel = true
branch = true

[tool.coverage.report]
omit = ["{{ cookiecutter.module_name }}/_generated_version.py", "{{ cookiecutter.module_name }}/tests/*"]

[tool.black]
target-version = ["py36", "py37", "py38"]
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html#how-black-wraps-lines
multi_line_output=3
lines_after_imports = 2
force_grid_wrap = 0
include_trailing_comma = "true"
use_parentheses = "true"
line_length = 88
