[metadata]
license = Apache License, Version 2.0

[bdist_wheel]
universal = 1

[flake8]
# https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length
max-line-length = 80
ignore = E203, E501, W503
select = C,E,F,W,B,B950
paths = .,{{ cookiecutter.module_name }}
exclude = .git,dist,build,env,venv,*.egg*

[tool:pytest]
norecursedirs = .git,dist,build,env,venv
strict = true
addopts = {{ cookiecutter.module_name }}/tests -s -vv --cov-config=pyproject.toml --cov={{ cookiecutter.module_name }} --cov-report term
